--- a/public/styles.css
+++ b/public/styles.css
@@ -121,8 +121,8 @@ table {
 }
 
 .player__turn-container img {
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
 }
 
 .player__turn-container h4 {
@@ -221,4 +221,10 @@ table {
 
 .player__o-won {
     background-color: var(--clr-x);
+}
+
+.player-box-img {
+    width: 50px;
+    height: 50px;
+    
 }
