--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;700&family=Poppins:wght@700&display=swap');
 /* ======================== RESET ================== */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -61,6 +61,7 @@ table {
 
     /* FONTS */
     --ff-sans-serif: font-family: 'Kanit', sans-serif;
+    --ff-poppins: font-family: 'Poppins', sans-serif;
 }
 
 /* ======================== MAIN CONTAINER ========================= */
@@ -97,6 +98,7 @@ table {
     align-items: center;
     justify-content: flex-start;
     gap: 5px; 
+    width: 100%;
 }
 
 .cross-logo {
@@ -227,4 +229,26 @@ table {
     width: 50px;
     height: 50px;
     
+}
+
+@media (max-width: 700px) {
+    .main-container {
+        width: 100%;
+        height: 100%;
+        padding: 4rem 0;
+    }
+
+    .logo-title {
+        display: block;
+        text-align: center;
+        margin-bottom: 2rem;
+        text-decoration: none;
+        color: skyblue;
+        font-family: var(--ff-poppins);
+        font-weight: 700;
+        font-size: 1.5rem;
+    }
+
+    
+
 }
